[project]
name = "mlx-community"
version = "0.1.0"
description = "OpenAI-compatible MLX inference server"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mlx-lm>=0.29.1",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "openai>=2.15.0",
    "transformers>=4.57.5",
    "torch>=2.10.0",
    "anthropic>=0.76.0",
]
